--- a/50-dev-access-using-console-link.adoc
+++ b/50-dev-access-using-console-link.adoc
@@ -7,9 +7,31 @@ NOTE: These steps require an account on a running instance of OpenShift with Cod
 
 === Log into Openshift and access CodeReady Workspaces
 . Open a Chrome browser
-. Open the CodeReady console URL: {{CODE_READY_HOST}}
+. Open the Openshift Console URL: {{CONSOLE_ADDRESS}}
 . Click `Advance` and Click `proceed...` link on the browser, you should be
 presented with the page to select the authentication providers.
++
+image::login-providers.png[image]
++
+. Click `htpasswd`
++
+image::ocp4-login.png[image]
+
+. Proceed to login with the username and password that were provided to you and you should hit the OpenShift console home page:
++
+image::ocp4-home.png[image]
++
+NOTE: If you login as regular user, you will not see any project when logging in the first time.
++
+. Click `Developer` under the drop down from `Administrator`
++
+image::dev-home.png[image]
++
+. Click CodeReady WorkSpaces using the application menu in open shift
++
+image::codeready-link.png[image]
++
+. You will be required to log in again.
 . Authorize user access to the CodeReady by clicking `Allow select permissions`
 +
 image::authorize-access.png[image]
